<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="default_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="default_email">support@example.com</string>
    <string name="default_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="default_text_in_messenger">https://practicum.yandex.ru/android-developer/</string>
    <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_input_hint">Поиск</string>
    <string name="search_clear_description">Очистить поисковый запрос</string>
    <string name="btn_back_description">Вернуться назад</string>
    <string name="refresh_search">Обновить</string>
    <string name="retry_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="connectivity_issues">Проблемы со связью</string>
    <string name="empty_search_placeholder">Ничего не нашлось</string>
    <string name="server_response_code">Код ответа сервера: %1$s</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="reported_empty_search_request">Поисковой запрос не может быть пустой</string>
    <string name="country_label">Страна</string>
    <string name="primary_genre_name_label">Жанр</string>
    <string name="release_date_label">Год</string>
    <string name="collection_name_label">Альбом</string>
    <string name="track_time_label">Длительность</string>
    <string name="current_track_time_placeholder">0:00</string>
    <string name="media_library">Медиатека</string>
    <string name="featured_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="tab_placeholder">Раздел</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_name_Input_hint">Название*</string>
    <string name="playlist_description_Input_hint">Описание</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="dialog_title_finish_creation">Завершить создание плейлиста?</string>
    <string name="dialog_message_unsaved_data">Все несохраненные данные будут потеряны</string>
    <string name="dialog_message_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="dialog_button_cancel">Отмена</string>
    <string name="dialog_button_finish">Завершить</string>
    <string name="track_singular">трек</string>
    <string name="track_few">трека</string>
    <string name="track_many">треков</string>
    <string name="minute_singular">минута</string>
    <string name="minute_few">минуты</string>
    <string name="minute_many">минут</string>
    <string name="want_to_delete_track">Хотите удалить трек?</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="yes_action">да</string>
    <string name="no_action">нет</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="header_edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="there_are_no_tracks">В этом плейлисте нет треков</string>
</resources>