<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawablePadding="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:text="@string/settings"
        android:textFontWeight="500"
        android:textSize="22sp"
        app:drawableLeftCompat="@drawable/ic_arrow_left" />

    <LinearLayout
        style="@style/SettingsMenuItemWrapperStyle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/dark_theme"
            android:textFontWeight="400"
            android:textSize="@dimen/font_size_menu_item" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_share_app"
        style="@style/SettingsMenuItemStyle"
        android:text="@string/share_app"
        app:drawableRightCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/btn_write_to_support"
        style="@style/SettingsMenuItemStyle"
        android:text="@string/write_to_support"
        app:drawableRightCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/btn_terms_of_use"
        style="@style/SettingsMenuItemStyle"
        android:text="@string/terms_of_use"
        app:drawableRightCompat="@drawable/ic_arrow_right" />

</LinearLayout>