<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue_bg"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black_ic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/media_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/media"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black_ic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black_ic" />


    </LinearLayout>

</LinearLayout>