<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yp_light_gray"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/imageCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_artwork"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/playlistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_bold"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="@color/yp_black"
            android:textFontWeight="700"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/playlistDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCover"
            tools:text="Playlist Name" />

        <TextView
            android:id="@+id/playlistDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="@color/yp_black"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlistName"
            tools:text="Playlyst Description" />

        <TextView
            android:id="@+id/tracks_time"
            style="@style/ItemSearchSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/yp_black"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlistDescription"
            app:layout_constraintWidth_max="wrap"
            app:layout_goneMarginStart="0dp"
            tools:text="15 минут" />

        <TextView
            android:id="@+id/tracks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/yp_black"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_ellipse_black"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toEndOf="@id/tracks_time"
            app:layout_constraintTop_toBottomOf="@id/playlistDescription"
            app:layout_constraintWidth_max="wrap"
            app:layout_goneMarginStart="0dp"
            app:tint="@color/yp_black"
            tools:text="4 трека" />

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/yp_light_gray"
            android:contentDescription="@null"
            android:src="@drawable/ic_share_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tracks_time" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/yp_light_gray"
            android:contentDescription="@null"
            android:src="@drawable/ic_more_playlist"
            app:layout_constraintStart_toEndOf="@id/btnShare"
            app:layout_constraintTop_toBottomOf="@id/tracks_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/track_list_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/yp_light_gray" />

        <TextView
            android:id="@+id/empty_playlist_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/there_are_no_tracks"
            android:textColor="@color/hint_color"
            android:visibility="gone" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_of_tracks_in_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/hook_btn"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/yp_light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/menu_bottom_sheet_playlist_cover"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hook_btn"
            app:shapeAppearanceOverlay="@style/RoundedImageViewStyle"
            tools:src="@drawable/placeholder_artwork" />

        <TextView
            android:id="@+id/menu_bottom_sheet_playlist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/menu_bottom_sheet_playlist_cover"
            app:layout_constraintTop_toBottomOf="@id/hook_btn"
            tools:text="Can't Help Falling in Love" />

        <TextView
            android:id="@+id/menu_bottom_sheet_tracks_count"
            style="@style/ItemSearchSubText"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/menu_bottom_sheet_playlist_cover"
            app:layout_constraintTop_toBottomOf="@id/menu_bottom_sheet_playlist_name"
            app:layout_constraintWidth_max="wrap"
            app:layout_goneMarginEnd="0dp"
            tools:text="Elvis Presley" />

        <TextView
            android:id="@+id/menu_bottom_sheet_share_playlist"
            style="@style/SettingsMenuItemStyle"
            android:layout_marginTop="93dp"
            android:text="@string/share_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/menu_bottom_sheet_edit_playlist"
            style="@style/SettingsMenuItemStyle"
            android:text="@string/edit_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_bottom_sheet_share_playlist" />

        <TextView
            android:id="@+id/menu_bottom_sheet_delete_playlist"
            style="@style/SettingsMenuItemStyle"
            android:text="@string/delete_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_bottom_sheet_edit_playlist" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>